feat: instantiate datasets

--- a/notebooks/n2n_baseline_model.ipynb
+++ b/notebooks/n2n_baseline_model.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "72e12d31",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "af78a573",
    "metadata": {},
    "outputs": [],
@@ -140,18 +140,81 @@
     "        super().__init__()\n",
     "        self.root = root\n",
     "        dataset_dir = root / \"data\" / \"preprocessed\" / dataset\n",
-    "        self.image_dir = dataset_dir / f\"{dataset}-{subdataset}-lowsnr\" # treat lowsnr as input image\n",
-    "        self.target_dir = dataset_dir / f\"{dataset}-{subdataset}-highsnr\" # treat highsnr as target image\n",
+    "        self.image_prefix = f\"{dataset}-{subdataset}-lowsnr\" \n",
+    "        self.target_prefix = f\"{dataset}-{subdataset}-highsnr\" \n",
+    "        self.image_dir = dataset_dir / self.image_prefix # treat lowsnr as input image\n",
+    "        self.target_dir = dataset_dir / self.target_prefix # treat highsnr as target image\n",
     "    \n",
     "    def __len__(self):\n",
     "        return sum(1 for path in self.image_dir.iterdir() if path.is_file()) # count number of images in directory\n",
     "    \n",
     "    def __getitem__(self, index):\n",
     "        img_index = (index // 8 ) \n",
-    "        image_patch = transform(io.decode_image(self.image_dir / f\"-{img_index}.png\"))\n",
-    "        target_patch = transform(io.decode_image(self.target_dir / f\"-{img_index}.png\"))\n",
+    "        image_patch = transform(io.decode_image(self.image_dir / f\"{self.image_prefix}-{img_index}.png\", mode=io.ImageReadMode.GRAY))\n",
+    "        target_patch = transform(io.decode_image(self.target_dir / f\"{self.target_prefix}-{img_index}.png\", mode=io.ImageReadMode.GRAY))\n",
+    "        return image_patch, target_patch\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a4755c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# instantiate subdatasets\n",
+    "base_dir = Path().resolve().parent\n",
+    "\n",
+    "dataset_20x_noise1_actin = N2NImageDataset(base_dir, dataset=\"20x-noise1\", subdataset=\"actin-20x-noise1\",transform=transform)\n",
+    "\n",
+    "dataset_20x_noise1_mito = N2NImageDataset(base_dir, dataset=\"20x-noise1\", subdataset=\"mito-20x-noise1\",transform=transform)\n",
+    "\n",
+    "dataset_60x_noise1_actin = N2NImageDataset(base_dir, dataset=\"60x-noise1\", subdataset=\"actin-60x-noise1\",transform=transform)\n",
+    "\n",
+    "dataset_60x_noise1_mito = N2NImageDataset(base_dir, dataset=\"60x-noise1\", subdataset=\"mito-60x-noise1\",transform=transform)\n",
+    "\n",
+    "dataset_60x_noise2_actin = N2NImageDataset(base_dir, dataset=\"60x-noise2\", subdataset=\"actin-60x-noise2\",transform=transform)\n",
+    "\n",
+    "dataset_60x_noise2_mito = N2NImageDataset(base_dir, dataset=\"60x-noise2\", subdataset=\"mito-60x-noise2\",transform=transform)\n",
+    "\n",
+    "dataset_confocal_actin = N2NImageDataset(base_dir, dataset=\"confocal\", subdataset=\"actin-confocal\",transform=transform_confocal)\n",
+    "\n",
+    "dataset_confocal_mito = N2NImageDataset(base_dir, dataset=\"confocal\", subdataset=\"mito-confocal\",transform=transform_confocal)\n",
+    "\n",
+    "dataset_membrane = N2NImageDataset(base_dir, dataset=\"membrane\", subdataset=\"membrane\",transform=transform)\n",
+    "\n",
+    "dataset_nucleus = N2NImageDataset(base_dir, dataset=\"nucleus\", subdataset=\"nucleus\",transform=transform_nucleus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "202b37b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 512, 512])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_nucleus[0][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9539975c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
