feat: correct model

--- a/notebooks/n2n_baseline_model.ipynb
+++ b/notebooks/n2n_baseline_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 83,
    "id": "080c9afd",
    "metadata": {},
    "outputs": [],
@@ -31,23 +31,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch version: 2.5.1\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'torchvision' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mPyTorch version: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtorch.__version__\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mTorchVision version: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtorchvision\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'torchvision' is not defined"
+      "PyTorch version: 2.5.1\n",
+      "Running on devide: mps\n"
      ]
     }
    ],
    "source": [
-    "print(f\"PyTorch version: {torch.__version__}\")\n"
+    "print(f\"PyTorch version: {torch.__version__}\")\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\" )\n",
+    "print(f\"Running on device: {device}\")"
    ]
   },
   {
@@ -106,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "id": "72e12d31",
    "metadata": {},
    "outputs": [],
@@ -114,22 +107,31 @@
     "# define transforms for dataset\n",
     "transform_confocal = v2.Compose([\n",
     "    v2.ToImage(),\n",
-    "    v2.RandomCrop(size=256,padding=1024,padding_mode=\"reflect\"),\n",
+    "    v2.RandomCrop(size=256,padding=512,padding_mode=\"reflect\"),\n",
     "])\n",
     "\n",
     "transform_nucleus = v2.Compose([\n",
     "    v2.ToImage(),\n",
-    "    v2.RandomCrop(size=256,padding=1536,padding_mode=\"reflect\"),\n",
+    "    v2.RandomCrop(size=256,padding=768,padding_mode=\"reflect\"),\n",
     "])\n",
     "\n",
     "transform = v2.Compose([\n",
     "    v2.ToImage(),\n",
+    "    v2.RandomCrop(size=256),\n",
     "])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55c01cae",
+   "metadata": {},
+   "source": [
+    "### N2N Dataset:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "af78a573",
    "metadata": {},
    "outputs": [],
@@ -144,14 +146,15 @@
     "        self.target_prefix = f\"{dataset}-{subdataset}-highsnr\" \n",
     "        self.image_dir = dataset_dir / self.image_prefix # treat lowsnr as input image\n",
     "        self.target_dir = dataset_dir / self.target_prefix # treat highsnr as target image\n",
-    "    \n",
+    "        self.transform = transform \n",
+    "\n",
     "    def __len__(self):\n",
-    "        return sum(1 for path in self.image_dir.iterdir() if path.is_file()) # count number of images in directory\n",
+    "        return sum(16 for path in self.image_dir.iterdir() if path.is_file()) # count number of images in directory\n",
     "    \n",
     "    def __getitem__(self, index):\n",
-    "        img_index = (index // 8 ) \n",
-    "        image_patch = transform(io.decode_image(self.image_dir / f\"{self.image_prefix}-{img_index}.png\", mode=io.ImageReadMode.GRAY))\n",
-    "        target_patch = transform(io.decode_image(self.target_dir / f\"{self.target_prefix}-{img_index}.png\", mode=io.ImageReadMode.GRAY))\n",
+    "        img_index = (index // 16 ) \n",
+    "        image_patch = self.transform(io.decode_image(self.image_dir / f\"{self.image_prefix}-{img_index}.png\", mode=io.ImageReadMode.GRAY))\n",
+    "        target_patch = self.transform(io.decode_image(self.target_dir / f\"{self.target_prefix}-{img_index}.png\", mode=io.ImageReadMode.GRAY))\n",
     "        return image_patch, target_patch\n",
     "\n"
    ]
@@ -166,52 +169,63 @@
     "# instantiate subdatasets\n",
     "base_dir = Path().resolve().parent\n",
     "\n",
-    "dataset_20x_noise1_actin = N2NImageDataset(base_dir, dataset=\"20x-noise1\", subdataset=\"actin-20x-noise1\",transform=transform)\n",
-    "\n",
-    "dataset_20x_noise1_mito = N2NImageDataset(base_dir, dataset=\"20x-noise1\", subdataset=\"mito-20x-noise1\",transform=transform)\n",
-    "\n",
-    "dataset_60x_noise1_actin = N2NImageDataset(base_dir, dataset=\"60x-noise1\", subdataset=\"actin-60x-noise1\",transform=transform)\n",
-    "\n",
-    "dataset_60x_noise1_mito = N2NImageDataset(base_dir, dataset=\"60x-noise1\", subdataset=\"mito-60x-noise1\",transform=transform)\n",
-    "\n",
-    "dataset_60x_noise2_actin = N2NImageDataset(base_dir, dataset=\"60x-noise2\", subdataset=\"actin-60x-noise2\",transform=transform)\n",
-    "\n",
-    "dataset_60x_noise2_mito = N2NImageDataset(base_dir, dataset=\"60x-noise2\", subdataset=\"mito-60x-noise2\",transform=transform)\n",
-    "\n",
-    "dataset_confocal_actin = N2NImageDataset(base_dir, dataset=\"confocal\", subdataset=\"actin-confocal\",transform=transform_confocal)\n",
-    "\n",
-    "dataset_confocal_mito = N2NImageDataset(base_dir, dataset=\"confocal\", subdataset=\"mito-confocal\",transform=transform_confocal)\n",
-    "\n",
-    "dataset_membrane = N2NImageDataset(base_dir, dataset=\"membrane\", subdataset=\"membrane\",transform=transform)\n",
-    "\n",
-    "dataset_nucleus = N2NImageDataset(base_dir, dataset=\"nucleus\", subdataset=\"nucleus\",transform=transform_nucleus)"
+    "subdatasets = [ N2NImageDataset(base_dir, dataset=\"20x-noise1\", subdataset=\"actin-20x-noise1\",transform=transform),\n",
+    "            N2NImageDataset(base_dir, dataset=\"20x-noise1\", subdataset=\"mito-20x-noise1\",transform=transform),\n",
+    "            N2NImageDataset(base_dir, dataset=\"60x-noise1\", subdataset=\"actin-60x-noise1\",transform=transform),\n",
+    "            N2NImageDataset(base_dir, dataset=\"60x-noise1\", subdataset=\"mito-60x-noise1\",transform=transform),\n",
+    "            N2NImageDataset(base_dir, dataset=\"60x-noise2\", subdataset=\"actin-60x-noise2\",transform=transform),\n",
+    "            N2NImageDataset(base_dir, dataset=\"60x-noise2\", subdataset=\"mito-60x-noise2\",transform=transform),\n",
+    "            N2NImageDataset(base_dir, dataset=\"confocal\", subdataset=\"actin-confocal\",transform=transform_confocal),\n",
+    "            N2NImageDataset(base_dir, dataset=\"confocal\", subdataset=\"mito-confocal\",transform=transform_confocal),\n",
+    "            N2NImageDataset(base_dir, dataset=\"membrane\", subdataset=\"membrane\",transform=transform),\n",
+    "            N2NImageDataset(base_dir, dataset=\"nucleus\", subdataset=\"nucleus\",transform=transform_nucleus)\n",
+    "]\n",
+    "n2n_dataset = ConcatDataset(subdatasets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "id": "202b37b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 512, 512])"
+       "15136"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset_nucleus[0][0].shape"
+    "len(n2n_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "9539975c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.mps.current_allocated_memory())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9539975c",
+   "id": "5f2b064f",
    "metadata": {},
    "outputs": [],
    "source": []
